# spacecraft-vms

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  README.md
.copilot/: instructions.md
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: firmware.yml  ros2.yml  static-analysis.yml
assets/: README.md
data/: README.md
docs/: architecture.md  interfaces.md  project_plan.md  safety_case.md  test_plan.md
firmware/: README.md
firmware/app/: main_app.c  posix_main.c
firmware/bsp/posix/: bsp_posix.c
firmware/middleware/ccsds/: ccsds.c  ccsds.h
firmware/middleware/logging/: log.h
firmware/middleware/pubsub/: pubsub.c
firmware/safety/: watchdog.h
firmware/tests/unit/: test_ccsds.c
scripts/: build.sh  test.sh
src/firmware/: CMakeLists.txt  README.md
src/firmware/middleware/pubsub/: pubsub.h
src/firmware/tests/unit/: test_pubsub.c
